update sass package

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,7 +8,7 @@ $secondary-font-stack: Cambria, "Hoefler Text", Utopia, "Liberation Serif",
 $baseline-height: 1.5em;
 $column-27: 3.7037%;
 $column-9: 11.11%;
-$box-shadow: 0 0 2px 0 hsla(210, 9, 17, 0.1);
+$box-shadow: 0 0 2px 0 hsla(210, 9%, 17%, 0.1);
 $five-fifty: 34.375em;
 $seven-hundred: 43.75em;
 $nine-fifty: 59.375em;
