--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ Author: Chris K. Thomas
 Author URI: https://chriskthomas.com
 Template: author
 Description: A child theme of Author by Compete Themes.
-Version: 1.49
+Version: 1.52
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, left-sidebar, accessibility-ready, custom-logo, custom-menu, featured-images, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, blog, education, news, wide-blocks
 Text Domain: authorchild
-Tested up to: 6.2.2
+Tested up to: 6.3
 Requires PHP: 5.6.40
 */
 /*===== Variables =====*/
@@ -1338,6 +1338,21 @@ a img {
 .comment-footer {
   margin-top: 1.5em;
 }
+.comment-footer .comment-link a {
+  font-size: 1em;
+  text-decoration: none;
+  color: #0a181e;
+}
+.comment-footer .comment-link a:link, .comment-footer .comment-link a:visited, .comment-footer .comment-link a:active, .comment-footer .comment-link a:hover, .comment-footer .comment-link a:focus {
+  color: #0a181e;
+}
+.comment-footer .comment-link a:active, .comment-footer .comment-link a:hover, .comment-footer .comment-link a:focus {
+  text-decoration: underline;
+}
+.comment-footer .comment-link a span {
+  font-size: 1em;
+}
+
 .comment-reply-link,
 .comment-edit-link {
   margin-left: 2px;
@@ -1925,9 +1940,9 @@ h6 {
 }
 
 /*!
- * Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- * Copyright 2023 Fonticons, Inc.
+ * Copyright 2024 Fonticons, Inc.
  */
 .fa {
   font-family: var(--fa-style-family, "Font Awesome 6 Free");
@@ -2288,7 +2303,7 @@ h6 {
 }
 
 .fa-rotate-by {
-  transform: rotate(var(--fa-rotate-angle, none));
+  transform: rotate(var(--fa-rotate-angle, 0));
 }
 
 .fa-stack {
@@ -5355,6 +5370,10 @@ readers do not read off random characters that represent icons */
   content: "\f033";
 }
 
+.fa-table-cells-column-lock::before {
+  content: "\e678";
+}
+
 .fa-church::before {
   content: "\f51d";
 }
@@ -8251,6 +8270,10 @@ readers do not read off random characters that represent icons */
   content: "\f031";
 }
 
+.fa-table-cells-row-lock::before {
+  content: "\e67a";
+}
+
 .fa-rupiah-sign::before {
   content: "\e23d";
 }
@@ -9623,10 +9646,6 @@ readers do not read off random characters that represent icons */
   content: "\f064";
 }
 
-.fa-arrow-turn-right::before {
-  content: "\f064";
-}
-
 .fa-mail-forward::before {
   content: "\f064";
 }
@@ -10154,9 +10173,9 @@ readers do not read off random characters that represent icons */
 }
 
 /*!
- * Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- * Copyright 2023 Fonticons, Inc.
+ * Copyright 2024 Fonticons, Inc.
  */
 :root, :host {
   --fa-style-family-classic: "Font Awesome 6 Free";
@@ -10176,9 +10195,9 @@ readers do not read off random characters that represent icons */
 }
 
 /*!
- * Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- * Copyright 2023 Fonticons, Inc.
+ * Copyright 2024 Fonticons, Inc.
  */
 :root, :host {
   --fa-style-family-brands: "Font Awesome 6 Brands";
@@ -10243,6 +10262,10 @@ readers do not read off random characters that represent icons */
 
 .fa-ups:before {
   content: "\f7e0";
+}
+
+.fa-pixiv:before {
+  content: "\e640";
 }
 
 .fa-wpexplorer:before {
@@ -10325,6 +10348,10 @@ readers do not read off random characters that represent icons */
   content: "\f1a9";
 }
 
+.fa-jxl:before {
+  content: "\e67b";
+}
+
 .fa-hire-a-helper:before {
   content: "\f3b0";
 }
@@ -10383,6 +10410,10 @@ readers do not read off random characters that represent icons */
 
 .fa-deskpro:before {
   content: "\f38f";
+}
+
+.fa-brave:before {
+  content: "\e63c";
 }
 
 .fa-sistrix:before {
@@ -10609,6 +10640,10 @@ readers do not read off random characters that represent icons */
   content: "\f384";
 }
 
+.fa-opensuse:before {
+  content: "\e62b";
+}
+
 .fa-pied-piper-alt:before {
   content: "\f1a8";
 }
@@ -10721,6 +10756,10 @@ readers do not read off random characters that represent icons */
   content: "\f3bb";
 }
 
+.fa-square-kickstarter:before {
+  content: "\f3bb";
+}
+
 .fa-grav:before {
   content: "\f2d6";
 }
@@ -10801,6 +10840,10 @@ readers do not read off random characters that represent icons */
   content: "\f294";
 }
 
+.fa-square-letterboxd:before {
+  content: "\e62e";
+}
+
 .fa-sticker-mule:before {
   content: "\f3f7";
 }
@@ -10843,6 +10886,10 @@ readers do not read off random characters that represent icons */
 
 .fa-confluence:before {
   content: "\f78d";
+}
+
+.fa-shoelace:before {
+  content: "\e60c";
 }
 
 .fa-mdb:before {
@@ -11007,6 +11054,10 @@ readers do not read off random characters that represent icons */
 
 .fa-envira:before {
   content: "\f299";
+}
+
+.fa-google-scholar:before {
+  content: "\e63b";
 }
 
 .fa-square-gitlab:before {
@@ -11185,6 +11236,10 @@ readers do not read off random characters that represent icons */
   content: "\f1ca";
 }
 
+.fa-signal-messenger:before {
+  content: "\e663";
+}
+
 .fa-paypal:before {
   content: "\f1ed";
 }
@@ -11229,6 +11284,10 @@ readers do not read off random characters that represent icons */
   content: "\e531";
 }
 
+.fa-mintbit:before {
+  content: "\e62f";
+}
+
 .fa-ethereum:before {
   content: "\f42e";
 }
@@ -11261,6 +11320,10 @@ readers do not read off random characters that represent icons */
   content: "\f378";
 }
 
+.fa-brave-reverse:before {
+  content: "\e63d";
+}
+
 .fa-facebook-f:before {
   content: "\f39e";
 }
@@ -11271,6 +11334,10 @@ readers do not read off random characters that represent icons */
 
 .fa-google-plus-square:before {
   content: "\f0d4";
+}
+
+.fa-web-awesome:before {
+  content: "\e682";
 }
 
 .fa-mandalorian:before {
@@ -11397,6 +11464,10 @@ readers do not read off random characters that represent icons */
   content: "\f1d5";
 }
 
+.fa-letterboxd:before {
+  content: "\e62d";
+}
+
 .fa-symfony:before {
   content: "\f83d";
 }
@@ -11483,6 +11554,10 @@ readers do not read off random characters that represent icons */
 
 .fa-xbox:before {
   content: "\f412";
+}
+
+.fa-square-web-awesome-stroke:before {
+  content: "\e684";
 }
 
 .fa-searchengin:before {
@@ -11581,6 +11656,10 @@ readers do not read off random characters that represent icons */
   content: "\e360";
 }
 
+.fa-upwork:before {
+  content: "\e641";
+}
+
 .fa-facebook:before {
   content: "\f09a";
 }
@@ -11623,6 +11702,10 @@ readers do not read off random characters that represent icons */
 
 .fa-whatsapp:before {
   content: "\f232";
+}
+
+.fa-square-upwork:before {
+  content: "\e67c";
 }
 
 .fa-slideshare:before {
@@ -11729,6 +11812,10 @@ readers do not read off random characters that represent icons */
   content: "\f213";
 }
 
+.fa-square-web-awesome:before {
+  content: "\e683";
+}
+
 .fa-sass:before {
   content: "\f41e";
 }
@@ -11777,6 +11864,10 @@ readers do not read off random characters that represent icons */
   content: "\f83f";
 }
 
+.fa-bluesky:before {
+  content: "\e671";
+}
+
 .fa-cc-jcb:before {
   content: "\f24b";
 }
@@ -11811,6 +11902,10 @@ readers do not read off random characters that represent icons */
 
 .fa-supple:before {
   content: "\f3f9";
+}
+
+.fa-webflow:before {
+  content: "\e65c";
 }
 
 .fa-rebel:before {
