adjust line height on titles

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -86,12 +86,12 @@ $tencent-weibo: #20b8e5;
 // 51px font
 %fifty-one-pixels {
   font-size: 3.1875em; /* 51px / 16px */
-  line-height: 1;
+  line-height: 1.18; /* 60px */
 }
 // 37px font
 %thirty-seven-pixels {
   font-size: 2.3125em; /* 37px / 16px */
-  line-height: 1;
+  line-height: 1.19; /* 44px */
 }
 // 28px font
 %twenty-eight-pixels {
