--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ Requires PHP: 5.6.40
 /***** Silent Classes *****/
 .post-title, h1 {
   font-size: 2.3125em; /* 37px / 16px */
-  line-height: 1;
+  line-height: 1.19; /* 44px */
 }
 
 h2 {
