--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -24,14 +24,14 @@ $seashell: #fcf4eeff;
 $mint: #68b684ff;
 
 $color-gray-95-blue: $seashell;
-$color-gray-85: color.mix($seashell, $cerulean, 85%);
-$color-gray-80: color.scale($cerulean, $lightness: 85%);
-$color-gray-70: color.mix(white, black, 75%);
-$color-gray-60: color.mix(white, black, 65%);
+$color-gray-85: color.mix($seashell, $rblack, 85%);
+$color-gray-80: color.mix($seashell, $rblack, 80%);
+$color-gray-70: color.mix($seashell, $rblack, 70%);
+$color-gray-60: color.mix($seashell, $rblack, 60%);
 $color-gray-40-blue: $mint;
-$color-gray-27-blue: color.mix($cerulean, $rblack, 60%);
+$color-gray-27-blue: color.mix($cerulean, $rblack, 27%);
 $color-gray-17-blue: $rblack;
-$color-gray-14-blue: color.scale($rblack, $lightness: -5%);
+$color-gray-14-blue: color.mix($cerulean, $rblack, 14%);
 
 /* Social Media Brand Colors */
 
