--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -29,9 +29,9 @@ $color-gray-80: color.mix($seashell, $rblack, 80%);
 $color-gray-70: color.mix($seashell, $rblack, 70%);
 $color-gray-60: color.mix($seashell, $rblack, 60%);
 $color-gray-40-blue: $mint;
-$color-gray-27-blue: color.mix($cerulean, $rblack, 27%);
+$color-gray-27-blue: color.mix($seashell, $rblack, 27%);
 $color-gray-17-blue: $rblack;
-$color-gray-14-blue: color.mix($cerulean, $rblack, 14%);
+$color-gray-14-blue: #000;
 
 /* Social Media Brand Colors */
 
